--- a/chicken-external/chicken-external.vcxproj
+++ b/chicken-external/chicken-external.vcxproj
@@ -90,6 +90,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,14 +143,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cheat.cpp" />
+    <ClCompile Include="IGameSession.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="process.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cheat.hpp" />
+    <ClInclude Include="feature.hpp" />
+    <ClInclude Include="ft_ammo_patch.hpp" />
     <ClInclude Include="IGameSession.hpp" />
+    <ClInclude Include="image_info.hpp" />
+    <ClInclude Include="interfaces.hpp" />
     <ClInclude Include="offsets.hpp" />
     <ClInclude Include="process.hpp" />
     <ClInclude Include="structs.hpp" />
+    <ClInclude Include="utils.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
