--- a/chicken-external/chicken-external.vcxproj
+++ b/chicken-external/chicken-external.vcxproj
@@ -150,12 +150,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cheat.hpp" />
+    <ClInclude Include="custom_data_types.hpp" />
     <ClInclude Include="feature.hpp" />
     <ClInclude Include="ft_ammo_patch.hpp" />
     <ClInclude Include="ft_score_patch.hpp" />
     <ClInclude Include="ft_time_adder.hpp" />
     <ClInclude Include="IGameSession.hpp" />
     <ClInclude Include="image_info.hpp" />
+    <ClInclude Include="image_x86.hpp" />
     <ClInclude Include="interfaces.hpp" />
     <ClInclude Include="offsets.hpp" />
     <ClInclude Include="process.hpp" />
